compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteVal.kt
package c

val i =<!SYNTAX!><!>
